--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,9 +1,8 @@
-<!-- Пример задания по математике -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Математика - Задание 1</title>
+    <title>Математика - Случайные задания</title>
     <style>
         body { font-family: Arial, sans-serif; background: #f0f0f0; }
         .task { background: #fff; padding: 20px; margin: 50px auto; width: 300px; border-radius: 8px; }
@@ -12,16 +11,28 @@
 </head>
 <body>
     <div class="task">
-        <h2>Сколько будет 2 + 2?</h2>
+        <h2 id="question"></h2>
         <input type="number" id="answer">
         <button onclick="checkAnswer()">Проверить</button>
+        <button onclick="generateTask()">Новое задание</button>
         <p id="result"></p>
     </div>
     <script>
+        let correctAnswer;
+
+        function generateTask() {
+            const a = Math.floor(Math.random() * 10) + 1;
+            const b = Math.floor(Math.random() * 10) + 1;
+            correctAnswer = a + b;
+            document.getElementById('question').textContent = `Сколько будет ${a} + ${b}?`;
+            document.getElementById('answer').value = '';
+            document.getElementById('result').textContent = '';
+        }
+
         function checkAnswer() {
-            const answer = document.getElementById('answer').value;
+            const answer = Number(document.getElementById('answer').value);
             const result = document.getElementById('result');
-            if (answer == 4) {
+            if (answer === correctAnswer) {
                 result.textContent = "Верно!";
                 result.style.color = "green";
             } else {
@@ -29,6 +40,9 @@
                 result.style.color = "red";
             }
         }
+
+        // Генерируем первое задание при загрузке страницы
+        window.onload = generateTask;
     </script>
 </body>
 </html>
